// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders Image correctly 1`] = `
<div
  className=
      ms-Image
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        overflow: hidden;
      }
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <img
    className=
        ms-Image-image
        ms-Image-image--portrait
        is-notLoaded
        is-fadeIn
        {
          display: block;
          opacity: 0;
        }
    onError={[Function]}
    onLoad={[Function]}
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
  />
</div>
`;

exports[`Image renders ImageFit.centerContain correctly 1`] = `
<div
  className=
      ms-Image
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        overflow: hidden;
        position: relative;
      }
  style={
    Object {
      "height": 100,
      "width": 50,
    }
  }
>
  <img
    className=
        ms-Image-image
        ms-Image-image--centerContain
        ms-Image-image--portrait
        is-notLoaded
        is-fadeIn
        {
          display: block;
          left: 50% /* @noflip */;
          max-height: 100%;
          opacity: 0;
          position: absolute;
          top: 50%;
          transform: translate(-50%,-50%);
        }
    onError={[Function]}
    onLoad={[Function]}
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
  />
</div>
`;

exports[`Image renders ImageFit.centerCover correctly 1`] = `
<div
  className=
      ms-Image
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        overflow: hidden;
        position: relative;
      }
  style={
    Object {
      "height": 100,
      "width": 50,
    }
  }
>
  <img
    className=
        ms-Image-image
        ms-Image-image--centerCover
        ms-Image-image--portrait
        is-notLoaded
        is-fadeIn
        {
          display: block;
          left: 50% /* @noflip */;
          max-width: 100%;
          opacity: 0;
          position: absolute;
          top: 50%;
          transform: translate(-50%,-50%);
        }
    onError={[Function]}
    onLoad={[Function]}
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
  />
</div>
`;
